src/test/deca/syntax/valid/improvided/read_int_float.deca
// Description :
// 	Test de readInt() et readFloat()
// Resultats :
//	ok


{
	int x = readInt();
	float y = readFloat();
}
