src/test/deca/syntax/invalid/improvided/left_operand_invalid.deca
// Description : 
// 	utiliser un left operand invalid (cas ou il n'existe pas )
// Resultats: 
// 	Ligne 6 : operande de gauche ( )invalide 
{
	int x = +  3;
}
